# anolis-workbench

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  justfile  pyproject.toml  renovate.json  requirements-lock.txt  requirements.txt  start.cmd  start.sh  version-locations.txt
.github/: dependabot.yml
.github/workflows/: check-compat-matrix.yml  ci.yml  deploy-parity.yml  desktop-release.yml  docs.yml  metrics.yml  release.yml
anolis_workbench/: __init__.py
anolis_workbench/catalog/: providers.json
anolis_workbench/cli/: __init__.py  main.py  package_cli.py  provision_cli.py
anolis_workbench/core/: __init__.py  appliance.py  bundler.py  deploy.py  executor.py  exporter.py  fleet.py  installer.py  launcher.py  observability.py  package_validator.py  paths.py  preflight.py  projects.py  releases.py  renderer.py  rollback.py  systemd.py  telemetry_config.py  updater.py  validator.py  workbench_service.py
anolis_workbench/frontend/: index.html
anolis_workbench/frontend/css/: style.css
anolis_workbench/frontend/js/: operate-state.js
anolis_workbench/frontend/js/composer/: commission-health.js  launch-guards.js
anolis_workbench/frontend/js/composer/forms/: bread-form.js  provider-list.js  sim-form.js
anolis_workbench/schema/: system.schema.json
anolis_workbench/schemas/: compatibility-matrix.yaml  machine-profile.schema.json  runtime-config.schema.json
anolis_workbench/server/: __init__.py  app.py
anolis_workbench/server/routes/: __init__.py  commission.py  compose.py  onboarding.py  operate.py  provision.py
anolis_workbench/templates/bioreactor-manual/: system.json
anolis_workbench/templates/mixed-bus-mock/: system.json
anolis_workbench/templates/sim-quickstart/: system.json
contracts/: README.md  composer-control.openapi.v1.yaml  runtime-http.openapi.v0.yaml  validate-composer-control-openapi.py  validate-handoff-packages.py  validate-workbench-api-openapi.py  workbench-api.openapi.v1.yaml
contracts/upstream/anolis/: machine-profile.lock.json  runtime-config.lock.json  runtime-http.lock.json
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: .gitkeep
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: commissioning-handoff-runbook.md  compatibility-matrices.md  release-desktop-handoff.md  release-pypi-handoff.md  versioning.md
docs/contracts/: composer-control-baseline.md  handoff-package-baseline.md  handoff-package-v1.md
docs/testing/: frontend-unit-test-audit.md
frontend/: .prettierrc  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.components.config.ts
frontend/src/: App.svelte  app.css  main.ts  svelte-shim.d.ts
frontend/src/lib/: ProviderList.svelte  RuntimeForm.svelte  api.ts  contracts.ts  guards.ts  operate-contracts.ts  operate-events.ts
frontend/src/routes/: Commission.svelte  Compose.svelte  Fleet.svelte  Home.svelte  Onboarding.svelte  Operate.svelte
frontend/tests/components/: commission.test.ts  compose.test.ts  helpers.ts  home.test.ts  setup.ts
frontend/tests/e2e/: shell-smoke.spec.ts
frontend/tests/unit/: api.test.ts  guards.test.ts  operate-contracts.test.ts  operate-events.test.ts
scripts/: freeze_server.py  generate-update-manifest.py  sync-upstream-schema-from-release.py  verify-upstream-schema.py
system-composer/: README.md  start.cmd  start.sh
system-composer/backend/: launcher.py  paths.py
system-composer/backend/frontend/: index.html
system-composer/backend/frontend/css/: style.css
system-composer/backend/frontend/js/: app.js  launch.js  sidebar.js  state.js  validation.js
system-composer/backend/frontend/js/forms/: ezo-form.js  provider-list.js
system-composer/tests/: test_templates.py
system-composer/tests/unit/: smoke_system_composer.py  test_control_contract.py  test_paths_runtime_support.py
tests/: test_templates.py
tests/e2e/: deploy_parity.sh
tests/fixtures/bioreactor/: anolis-runtime.bioreactor.manual.yaml  anolis-runtime.bioreactor.telemetry.yaml  provider-bread.bioreactor.yaml  provider-ezo.bioreactor.yaml
tests/integration/: test_sidecar_health.py
tests/unit/: launch_url_resolution.test.mjs  operate_contracts.test.mjs  operate_events.test.mjs  smoke_system_composer.py  test_bundler.py  test_cli_config.py  test_control_contract.py  test_deploy.py  test_executor.py  test_exporter.py  test_fleet.py  test_installer.py  test_observability.py  test_onboarding.py  test_operate_proxy.py  test_package_validator.py  test_paramiko_executor.py  test_paths_runtime_support.py  test_preflight.py  test_projects_validation.py  test_provision_cli.py  test_provision_routes.py  test_rollback.py  test_shell_route_support.py  test_systemd.py  test_telemetry_config.py  test_validator.py  workbench_guards.test.mjs
workbench/: README.md  start.cmd  start.sh
workbench/backend/: exporter.py  server.py
workbench/backend/frontend/js/: app.js  operate-workspace.js  shell-guards.js
workbench/backend/frontend/js/composer/: health.js  launch.js  log-pane.js
workbench/backend/frontend/js/composer/forms/: runtime-form.js
workbench/backend/frontend/js/operate/: contracts.js  events.js
workbench/frontend/js/composer/forms/: runtime-form.js
workbench/tests/unit/: test_shell_route_support.py
