[package]
name = "anolis-workbench-desktop"
version = "0.2.0"
description = "Native desktop wrapper for Anolis Workbench"
authors = ["anolishq"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
tauri = { version = "2.0" }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
