[package]
name = "anolis-workbench-desktop"
version = "0.11.2"
description = "Native desktop wrapper for Anolis Workbench"
authors = ["anolishq"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
tauri = { version = "2.0" }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde_json = "1"
